fix: remove overlapping issue

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -297,7 +297,7 @@ input[name='q']::placeholder {
 /* For screens that are 991px or less */
 @media (max-width: 991px) {
     .header-container {
-        padding-top: 116px;
+        padding-top: 140px;
     }
 
     body {
